--- a/CTThinker.css
+++ b/CTThinker.css
@@ -18,6 +18,7 @@ td{
 .div1{
     place-items: center;
     text-align: center;
+    background-color: #d2fff8;
     border: 1px solid black;
 }
 .button3{
