--- a/CTThinker.css
+++ b/CTThinker.css
@@ -26,6 +26,8 @@ td{
     text-align: center;
     background-color: #fdfdfd;
     border: 2px solid black;
+    width:1000px;
+    height:50px;
 }
 .button4{
     height: 40px;
